feat: add fetch job history visibility
